  for the template. This also allows us to use the more logical
  auto_reload flag instead of reusing PROD_MODE, which is also used
  for other purposes.
  [wichert]

- Treat comments, processing instructions, and named entities in the
  source template as "literals", which will be rendered into the
  output unchanged. [chrism]

  Bugfixes

- Fixed interpolation bug where multiple attributes with interpolation
  expressions would result in corrupted output. [malthe]

- Support try-except operator ('|') when 'python' is the default
  expression type. [malthe]
  
- METAL macros should render in the template where they're
  defined. [malthe]
  
- Avoid printing a line-break when we repeat over a single item
  only. [malthe]
  
- Corrected Genshi namespace (needs a trailing slash). [malthe]

- Fixed a few more UnicodeDecodeErrors (test contributed by Wiggy).
  In particular, never upcast to unicode during transformation, and
  utf-8 encode Unicode attribute keys and values in Assign expressions
  (e.g. py:attrs). [chrism]

- Fixed off-by-one bug in interpolation routine. [malthe]

- The repeat-clause should not output tail with every iteration. [malthe]

- CDATA sections are now correctly handled when using the
  ElementTree-parser. [malthe]

- Fixed bug in path-expressions where string instances would be
  (attempted) called. [malthe]

- CDATA sections are now correctly preserved when using expression
  interpolation. [malthe]

- The Genshi interpolation operator ${} should not have its result
  escaped when used in the text or tail regions. [malthe]

- Fixed edge case bug where inserting both a numeric entity and a
  literal set of unicode bytes into the same document would cause a
  UnicodeDecodeError. See also
  http://groups.google.com/group/z3c_pt/browse_thread/thread/aea963d25a1778d0?hl=en
  [chrism]

- Static attributes are now properly overriden by py:attr-attributes.
  [malthe]
  
Version 0.9 - August 7, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
